<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/containerAddPositions"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <View
        android:id="@+id/viewAddPositionsDim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/global_dim"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerBottomSheetPosition"
        style="@style/PositionBottomSheetDrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        app:behavior_fitToContents="false"
        app:behavior_hideable="true"
        app:layout_behavior="com.example.kdotdi.common.utils.widget.NoTouchBottomSheetBehavior">

        <TextView
            android:id="@+id/labelAddPositionTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30dp"
            android:layout_marginBottom="@dimen/margin_30dp"
            android:fontFamily="@font/baloo_tamma_regular"
            android:gravity="center"
            android:text="@string/cv_positions_title"
            android:textColor="@color/global_white"
            android:textSize="@dimen/textsize_24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageAddPositionClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:src="@drawable/ic_close_white"
            app:layout_constraintBottom_toBottomOf="@+id/labelAddPositionTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/labelAddPositionTitle" />

        <View
            android:id="@+id/sheetBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/global_white_60percent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/recyclerCvPosition" />
        
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCvPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30dp"
            android:background="@color/global_white"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@id/buttonCvPositionAdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_min="@dimen/main_button_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelAddPositionTitle"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/buttonCvPositionAdd"
            style="@style/LightMaterialButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/main_button_height"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_32dp"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/cv_positions_add"
            app:layout_constraintBottom_toTopOf="@+id/buttonCvPositionsSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerCvPosition" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCvPositionsSave"
            style="@style/MaterialButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/main_button_height"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:enabled="false"
            android:text="@string/cv_positions_save"
            app:layout_constraintBottom_toTopOf="@id/buttonCvPositionsClear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonCvPositionAdd" />

        <TextView
            android:id="@+id/buttonCvPositionsClear"
            android:layout_width="0dp"
            android:layout_height="@dimen/main_button_height"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:fontFamily="@font/baloo_tamma_medium"
            android:gravity="center"
            android:text="@string/cv_positions_clear"
            android:textColor="@color/global_error"
            android:textSize="@dimen/textsize_14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>